# xoshiro-fortran

./: .gitignore  Makefile  README.md
reference/: .gitignore
reference/generate_sample/: eval_status_fclose.c  eval_status_fopen.c  fclose_save_samples.c  fopen_save_samples.c  fwrite_generator_state.c  generate_sample.h  set_state.c
reference/handle_markdown/: handle_markdown.h  print_heading.c  print_table.c  print_value.c
reference/xoshiro256plusplus/: CMakeLists.txt  README.md  main.c  test_xoshiro256plusplus.c  test_xoshiro256plusplus.h
reference/xoshiro256plusplus/test_xoshiro256plusplus/: eval_status_fclose.c  eval_status_fopen.c  test_xoshiro256plusplus.c
reference/xoshiro256starstar/: CMakeLists.txt  README.md  main.c  test_xoshiro256starstar.c  test_xoshiro256starstar.h
src/: CMakeLists.txt  imp_allocate_state.f90  imp_copy_array.f90  imp_copy_state.f90  imp_deallocate_state.f90  imp_jump_state.f90  imp_jump_state_core.f90  imp_jump_state_long.f90  imp_output_size_state.f90  imp_output_state.f90  imp_random_number_real64.f90  imp_random_number_scalar_int64.f90  imp_random_number_sclr_int64.f90  imp_random_number_sclr_real64.f90  imp_rotl.f90  imp_set_state.f90  imp_show_state.f90  imp_transform_to_unit_interval.f90  imp_update_state.f90  module.f90
test/: .gitignore  CMakeLists.txt  README.md
test/src/: main.f90
test/src/xoshiro_test/: module.f90
test/src/xoshiro_test/test_generator/: submodule.f90
test/src/xoshiro_test/test_generator/for_0256/: submodule.f90
test/src/xoshiro_test/test_generator/show_header/: submodule.f90
test/src/xoshiro_test/test_generator/show_sample/: submodule.f90
test/src/xoshiro_test/test_generator/show_state/: submodule.f90
test/src/xoshiro_test/test_generator/show_table_column/: submodule.f90
test/src/xoshiro_test/test_generator/show_table_header/: submodule.f90
test/xoroshiro128plus1/: CMakeLists.txt  README.md  main.f90
test/xoroshiro128plus1_c_interface/: CMakeLists.txt  module.f90
test/xoroshiro128plus2/: CMakeLists.txt  README.md  main.f90
test/xoroshiro128plus2_c_interface/: CMakeLists.txt  module.f90
test/xoroshiro128star2/: CMakeLists.txt  README.md  main.f90
test/xoroshiro128star2_c_interface/: CMakeLists.txt  module.f90
test/xoshiro256plus1/: CMakeLists.txt  README.md  main.f90
test/xoshiro256plus1_c_interface/: CMakeLists.txt  module.f90
test/xoshiro256plus2/: CMakeLists.txt  README.md  main.f90
test/xoshiro256plus2_c_interface/: CMakeLists.txt  module.f90
test/xoshiro256star2/: CMakeLists.txt  README.md  main.f90
test/xoshiro256star2_c_interface/: CMakeLists.txt  module.f90
test/xoshiro512plus1/: CMakeLists.txt  README.md  main.f90
test/xoshiro512plus1_c_interface/: CMakeLists.txt  module.f90
test/xoshiro512plus2/: CMakeLists.txt  README.md  main.f90
test/xoshiro512plus2_c_interface/: CMakeLists.txt  module.f90
test/xoshiro512star2/: CMakeLists.txt  README.md  main.f90  reset_build.sh
test/xoshiro512star2_c_interface/: CMakeLists.txt  module.f90
test/xoshiro_c_interface/: CMakeLists.txt  getter.c  module.f90  setter.c
test/xoshiro_test/: CMakeLists.txt  module.f90
